<resources>
    <string name="app_name">Automat</string>
    <string name="rv_machine_name">%1$s</string>
    <string name="rv_machine_status">%1$s</string>
    <string name="home_fab_description">Cerca Automat nelle vicinanze</string>
    <string name="machine_activity_subtitle">in %1$s</string>
    <string name="product_price">%1$.2f€</string>
    <string name="product_page_title">%1$s</string>
    <string name="cart_full_alert">Non puoi ordinare più di 5 articoli!</string>
    <string name="cart_empty_alert">Il carrello è vuoto!</string>
    <string name="cart_item_added_alert">%1$s aggiunto al carrello</string>
    <string name="cart_item_removed_alert">%1$s rimosso dal carrello</string>
    <string name="cart_item_marked_alert">%1$s aggiunto ai preferiti</string>
    <string name="cart_item_unmarked_alert">%1$s rimosso dai preferiti</string>
    <string name="scan_help_text">Premi il pulsante Rileva per trovare distributori Automat vicini</string>
    <string name="item_quantity">%1$d</string>
    <string name="user_order_tally">%1$d acquisti effettuati</string>
    <string name="user_profile_automat_tally">%1$d punti Automat</string>
    <string name="product_availability">%1$d rimasti</string>
    <string name="total_price">Totale: %1$.2f€</string>
    <string name="total_price_in_automats">(= %1$d punti Automat)</string>
    <string name="automats_earned">Hai guadagnato %1$d punti Automat!</string>
    <string name="earned_automat_points_message">Con questo ordine guadagni %1$d punti Automat!</string>
    <string name="new_automat_points_balance_message">Nuovo saldo: %1$d</string>
    <string name="plus_automat_points">+%1$d</string>
    <string name="order_history_length_message">%1$d ordini effettuati</string>
    <string name="cart_product_count">%1$d prodotti</string>
    <string name="slot_count">%1$d su %2$d slot assegnati</string>
    <string name="details_title">Info su %1$s</string>
    <string name="cart_fab_text">Carrello (%1$d)</string>
    <string name="order_items_count">1. Rivedi articoli (%1$d selezionati)</string>
    <string name="order_total_recap">Totale (%1$d articoli): %1$.2f€</string>
    <string name="detected_count">%1$d Macchine rilevate</string>
    <string name="panel_machine_serial_number">Codice macchina: %1$s</string>
    <string name="panel_machine_status">Stato: %1$s</string>
    <string name="slot_name">#%1$s</string>
    <string name="slot_assigned_title">Slot #%1$s</string>
    <string name="slot_assigned_to">ASSEGNATO A: %1$s</string>
    <string name="slot_assigned_to_units">UNITÀ RIMANENTI: %1$d/%2$d</string>
    <string name="slot_assign_title">Assegna #%1$s</string>
</resources>