<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/productCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="1dp"
    app:strokeColor="@color/stroke_color"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/slotHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="999dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/slotName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="4dp"
                android:text="@string/slot_name"
                android:textFontWeight="700"
                android:textSize="20dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/unassignedSlotView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eee">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/big_margin"
                android:orientation="vertical"
                android:gravity="center"
                android:clipToPadding="false"
                android:minHeight="220dp">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/round_add_24"
                    android:scaleType="centerCrop"
                    android:contentDescription="Product picture"
                    android:padding="@dimen/medium_margin"
                    android:background="@drawable/outline_gray_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productPic"
                    android:text="Assegna"
                    android:textAlignment="center"
                    android:textSize="20dp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/assignedSlotView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/productPic"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/placeholder"
                android:scaleType="centerInside"
                android:contentDescription="Product picture"
                android:padding="@dimen/medium_margin"/>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productPic"
                android:text="Placeholder"
                android:textFontWeight="700"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productName"
                android:text="@string/product_price"/>

            <TextView
                android:id="@+id/productAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/productName"
                android:layout_alignParentEnd="true"
                android:text="@string/product_availability"
                android:textColor="@color/light_text_color" />
        </RelativeLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>